4.x: Observable concatEager API reduction